// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar component should render with all the props given 1`] = `
<div>
  <div
    class="sc-hKgILt ciEbKA"
  >
    <div
      class="sc-gsTCUz jTFECS"
    >
      <div>
        <a
          class="sc-jSgupP eMyKUQ"
          href="#"
        >
          <span
            class="sc-eCssSg hBpHdJ"
          >
            Home
          </span>
        </a>
      </div>
      <div>
        <a
          class="sc-jSgupP eMyKUQ"
          href="#"
        >
          <span
            class="sc-eCssSg hBpHdJ"
          >
            About Us
          </span>
        </a>
      </div>
      <div>
        <a
          class="sc-jSgupP eMyKUQ"
          href="#"
        >
          <span
            class="sc-eCssSg hBpHdJ"
          >
            Articles
          </span>
        </a>
      </div>
      <div>
        <a
          class="sc-jSgupP eMyKUQ"
          href="#"
        >
          <span
            class="sc-eCssSg hBpHdJ"
          >
            Contact
          </span>
        </a>
      </div>
    </div>
    <button
      class="sc-dlfnbm hGVZlN Burger"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 "
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`NavBar component should render with default theme 1`] = `
<div>
  <div
    class="sc-hKgILt ciEbKA"
  >
    <div
      class="sc-gsTCUz fcBDvu"
    />
    <button
      class="sc-dlfnbm hGVZlN Burger"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-bars fa-w-14 "
        data-icon="bars"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
